--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ body {
     overflow-x: hidden;
 }
 
+.gallery {
+    width: 100%;
+    height: 100%;
+}
+
 .hero {
     display: flex;
     justify-content: center;
