--- a/style.css
+++ b/style.css
@@ -15,8 +15,9 @@ body {
 }
 
 .gallery {
-    width: 100%;
-    height: 100%;
+    height: 25vh;
+    object-fit: cover;
+    object-position: center;
 }
 
 .hero {
